--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ jdbc.password=123
 
 
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.format_sql=false
 hibernate.jdbc.batch_size=20
 #dbcp settings
