--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,8 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath*:/applicationContext*.xml
+            classpath*:/applicationContext.xml,
+            classpath*:/applicationContext-shiro.xml
         </param-value>
     </context-param>
     <context-param>
@@ -100,9 +101,5 @@
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/views/error/404.jsp</location>
-    </error-page>
-    <error-page>
-        <error-code>400</error-code>
-        <location>/WEB-INF/views/error/400.jsp</location>
     </error-page>
 </web-app>
