--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ dbcp.maxActive=40
 #=======================================================================================================================
 
 
+recaptcha_url=http://www.google.com/recaptcha/api/verify
+recaptcha_public_key=6LdJwO8SAAAAAGBPTKMv4mWI8NsEL34Kj15CXTui
+recaptcha_private_key=6LdJwO8SAAAAAPywsHWpuKmOUhSdmEpHeXUEN6zd
