--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>bukh</name>
     <properties>
         <!--主要依赖版本-->
-        <spring.version>3.2.2.RELEASE</spring.version>
+        <spring.version>4.0.2.RELEASE</spring.version>
         <hibernate.version>4.2.5.Final</hibernate.version>
         <guava.version>15.0</guava.version>
         <jackson.version>2.2.2</jackson.version>
@@ -21,13 +21,22 @@
         <commons-lang3.version>3.1</commons-lang3.version>
         <shiro.version>1.2.2</shiro.version>
         <joda.version>2.2</joda.version>
-        <jetty.version>7.6.10.v20130312</jetty.version>
+        <jetty.version>7.6.14.v20131031</jetty.version>
         <sitemesh.version>2.4.2</sitemesh.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.6</jdk.version>
-        <jdbc.driver.groupId>mysql</jdbc.driver.groupId>
-        <jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
-        <jdbc.driver.version>5.1.13</jdbc.driver.version>
+
+        <h2.version>1.3.175</h2.version>
+        <tomcat-jdbc.version>7.0.52</tomcat-jdbc.version>
+
+        <jdbc.driver.groupId>com.h2database</jdbc.driver.groupId>
+        <jdbc.driver.artifactId>h2</jdbc.driver.artifactId>
+        <jdbc.driver.version>${h2.version}</jdbc.driver.version>
+
+        <!--<jdbc.driver.groupId>mysql</jdbc.driver.groupId>-->
+        <!--<jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>-->
+        <!--<jdbc.driver.version>5.1.22</jdbc.driver.version>-->
+
     </properties>
     <dependencies>
         <dependency>
@@ -122,12 +131,6 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>org.hibernate</groupId>-->
-        <!--<artifactId>hibernate-ehcache</artifactId>-->
-        <!--<version>${hibernate.version}</version>-->
-        <!--</dependency>-->
 
         <!-- j2ee web spec -->
         <dependency>
@@ -250,17 +253,15 @@
             <artifactId>commons-codec</artifactId>
             <version>1.6</version>
         </dependency>
-        <!-- optional datasource pool -->
+
+        <!-- connection pool -->
         <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>${tomcat-jdbc.version}</version>
+            <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>commons-pool</groupId>
-            <artifactId>commons-pool</artifactId>
-            <version>1.6</version>
-        </dependency>
+
         <dependency>
             <groupId>opensymphony</groupId>
             <artifactId>sitemesh</artifactId>
@@ -270,6 +271,14 @@
     </dependencies>
     <build>
         <plugins>
+            <!-- ant插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+            </plugin>
+
+            <!-- jetty插件, 设定context path与spring profile -->
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -278,7 +287,7 @@
                     <systemProperties>
                         <systemProperty>
                             <name>spring.profiles.active</name>
-                            <value>production</value>
+                            <value>development</value>
                         </systemProperty>
                     </systemProperties>
                     <useTestClasspath>true</useTestClasspath>
@@ -290,4 +299,30 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <!-- 刷新开发环境数据库 -->
+        <profile>
+            <id>refresh-db</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <configuration>
+                            <target>
+                                <property file="src/test/resources/application.development.properties"/>
+                                <sql driver="${jdbc.driver}" url="${jdbc.url}" userid="${jdbc.username}"
+                                     password="${jdbc.password}"
+                                     onerror="continue" encoding="${project.build.sourceEncoding}">
+                                    <classpath refid="maven.test.classpath"/>
+                                    <transaction src="src/main/resources/sql/h2/schema.sql"/>
+                                    <transaction src="src/test/resources/data/h2/import-data.sql"/>
+                                </sql>
+                            </target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
