--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=true
 hibernate.format_sql=false
 hibernate.jdbc.batch_size=20
-#dbcp settings
-dbcp.maxIdle=5
-dbcp.maxActive=40
+
+#connection pool settings
+jdbc.pool.maxIdle=10
+jdbc.pool.maxActive=50
 
 #=======================================================================================================================
 
