--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <logback.version>1.0.13</logback.version>
         <commons-lang3.version>3.1</commons-lang3.version>
         <shiro.version>1.2.2</shiro.version>
+        <httpclient.version>4.3.1</httpclient.version>
         <joda.version>2.2</joda.version>
         <jetty.version>7.6.14.v20131031</jetty.version>
         <sitemesh.version>2.4.2</sitemesh.version>
@@ -130,6 +131,19 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+
+        <!-- httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- j2ee web spec -->
